<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/background"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        >

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->
            <!--android:text="@string/jumbo_eats"-->
            <!--android:id="@+id/title"-->
            <!--android:background="#663300"-->
            <!--android:textColor="#ffffff"-->
            <!--android:textSize="30sp"-->
            <!--android:typeface="sans" />-->
            <!--android:gravity="center"/>-->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_food"
                android:id="@+id/title"
                android:textColor="@color/brownTheme"
                android:textSize="30sp"
                android:layout_marginBottom="60dp"
                android:gravity="center"
                />

            <EditText android:id="@+id/edit_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_food"
                android:layout_alignParentStart="false"
                android:layout_alignParentLeft="false"
                android:background="@drawable/edit_text"
                android:layout_below="@+id/title"/>

            <EditText android:id="@+id/edit_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_place"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/edit_food"
                android:layout_marginTop="50dp"
                android:background="@drawable/edit_text"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_event"
                android:hint="@string/enter_event"
                android:layout_below="@+id/edit_place"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/edit_text"

                />



            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_date"
                android:layout_below="@+id/edit_event"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="49dp"
                android:backgroundTint="@color/brownTheme" />

            <TimePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_time"
                android:layout_below="@+id/edit_date"
                android:layout_marginTop="50dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_time"
                android:layout_marginTop="50dp"
                android:layout_centerInParent="true"
                android:backgroundTint="@color/brownTheme" >
                <Button
                    android:layout_width="130dp"
                    android:layout_height="60dp"
                    android:text="@string/cancel"
                    android:textSize="30sp"
                    android:textColor="@color/brownTheme"
                    android:id="@+id/cancel_event"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/button"
                    />

                <Button
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:text="@string/post"
                    android:textSize="30sp"
                    android:textColor="@color/brownTheme"
                    android:id="@+id/post_event"
                    android:layout_alignBottom="@+id/cancel_event"
                    android:layout_toRightOf="@+id/cancel_event"
                    android:background="@drawable/button"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>